--- a/style.css
+++ b/style.css
@@ -253,3 +253,19 @@ footer {
     text-align: center;
     font-size: 15px;
 }
+
+#inspiroGif {
+    height: 30%;
+    width: 60%;
+    margin: 0 auto;
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  
+
+}
+
+.bold {
+    font-weight: bolder;
+}
